--- a/dep.yaml
+++ b/dep.yaml
@@ -1,8 +1,8 @@
-#по поставленному тз я выделил 2е задачи:
-#1) Высокая доступность развертывания модулей на уровне узла и на уровне зоны доступности.
-#2) Эффективное распределение ресурсов с защитой от перераспределения
+#РїРѕ РїРѕСЃС‚Р°РІР»РµРЅРЅРѕРјСѓ С‚Р· СЏ РІС‹РґРµР»РёР» 2Рµ Р·Р°РґР°С‡Рё:
+#1) Р’С‹СЃРѕРєР°СЏ РґРѕСЃС‚СѓРїРЅРѕСЃС‚СЊ СЂР°Р·РІРµСЂС‚С‹РІР°РЅРёСЏ РјРѕРґСѓР»РµР№ РЅР° СѓСЂРѕРІРЅРµ СѓР·Р»Р° Рё РЅР° СѓСЂРѕРІРЅРµ Р·РѕРЅС‹ РґРѕСЃС‚СѓРїРЅРѕСЃС‚Рё.
+#2) Р­С„С„РµРєС‚РёРІРЅРѕРµ СЂР°СЃРїСЂРµРґРµР»РµРЅРёРµ СЂРµСЃСѓСЂСЃРѕРІ СЃ Р·Р°С‰РёС‚РѕР№ РѕС‚ РїРµСЂРµСЂР°СЃРїСЂРµРґРµР»РµРЅРёСЏ
 
-#Первая задача уже частично решена в интернете, нам как раз нужно распределение на 3 зоны, так что возьмём шаблон из примера
+#РџРµСЂРІР°СЏ Р·Р°РґР°С‡Р° СѓР¶Рµ С‡Р°СЃС‚РёС‡РЅРѕ СЂРµС€РµРЅР° РІ РёРЅС‚РµСЂРЅРµС‚Рµ, РЅР°Рј РєР°Рє СЂР°Р· РЅСѓР¶РЅРѕ СЂР°СЃРїСЂРµРґРµР»РµРЅРёРµ РЅР° 3 Р·РѕРЅС‹, С‚Р°Рє С‡С‚Рѕ РІРѕР·СЊРјС‘Рј С€Р°Р±Р»РѕРЅ РёР· РїСЂРёРјРµСЂР°
 
 apiVersion: apps/v1
 kind: Deployment
@@ -19,8 +19,8 @@ spec:
         app: store
     spec:
       affinity:
-        podAntiAffinity:                                            #В "podAntiAffinity:" этом файле yaml указывается AntiAffinity узла.
-          preferredDuringSchedulingIgnoredDuringExecution:          #позволяет по возможности назначать модули pod разным зонам доступности, если количество модулей pod больше, чем количество зон доступности.
+        podAntiAffinity:                                            #Р’ "podAntiAffinity:" СЌС‚РѕРј С„Р°Р№Р»Рµ yaml СѓРєР°Р·С‹РІР°РµС‚СЃСЏ AntiAffinity СѓР·Р»Р°.
+          preferredDuringSchedulingIgnoredDuringExecution:          #РїРѕР·РІРѕР»СЏРµС‚ РїРѕ РІРѕР·РјРѕР¶РЅРѕСЃС‚Рё РЅР°Р·РЅР°С‡Р°С‚СЊ РјРѕРґСѓР»Рё pod СЂР°Р·РЅС‹Рј Р·РѕРЅР°Рј РґРѕСЃС‚СѓРїРЅРѕСЃС‚Рё, РµСЃР»Рё РєРѕР»РёС‡РµСЃС‚РІРѕ РјРѕРґСѓР»РµР№ pod Р±РѕР»СЊС€Рµ, С‡РµРј РєРѕР»РёС‡РµСЃС‚РІРѕ Р·РѕРЅ РґРѕСЃС‚СѓРїРЅРѕСЃС‚Рё.
           - labelSelector:
               matchExpressions:
               - key: app
@@ -42,11 +42,11 @@ spec:
     image: images.my-company.example/app:v4
     resources:
       requests:
-        memory: "128Mi"                                            #Для достижения наименьших затрат ограничемся минимально возможным реквестом
-        cpu: "100m"                                                #Аналогично с CPU
+        memory: "128Mi"                                            #Р”Р»СЏ РґРѕСЃС‚РёР¶РµРЅРёСЏ РЅР°РёРјРµРЅСЊС€РёС… Р·Р°С‚СЂР°С‚ РѕРіСЂР°РЅРёС‡РµРјСЃСЏ РјРёРЅРёРјР°Р»СЊРЅРѕ РІРѕР·РјРѕР¶РЅС‹Рј СЂРµРєРІРµСЃС‚РѕРј
+        cpu: "100m"                                                #РђРЅР°Р»РѕРіРёС‡РЅРѕ СЃ CPU
       limits:
-        memory: "128Mi"                                            #Согласно условию память стабильна, так что лимит будет совпадать с запросом
-        cpu: "500m"                                                #Из-за скачка потребления лимит по cpu сделаем больше 
+        memory: "128Mi"                                            #РЎРѕРіР»Р°СЃРЅРѕ СѓСЃР»РѕРІРёСЋ РїР°РјСЏС‚СЊ СЃС‚Р°Р±РёР»СЊРЅР°, С‚Р°Рє С‡С‚Рѕ Р»РёРјРёС‚ Р±СѓРґРµС‚ СЃРѕРІРїР°РґР°С‚СЊ СЃ Р·Р°РїСЂРѕСЃРѕРј
+        cpu: "500m"                                                #РР·-Р·Р° СЃРєР°С‡РєР° РїРѕС‚СЂРµР±Р»РµРЅРёСЏ Р»РёРјРёС‚ РїРѕ cpu СЃРґРµР»Р°РµРј Р±РѕР»СЊС€Рµ 
 ---
 apiVersion: apps/v1
 kind: ResoureQuotas                                                
@@ -59,4 +59,4 @@ spec:
         limits.cpu: 2000m
         limits.memory: 512mib
 
-#для максимальной отказоустойчивости лучше всего использовать horizontalautoscaler
+#РґР»СЏ РјР°РєСЃРёРјР°Р»СЊРЅРѕР№ РѕС‚РєР°Р·РѕСѓСЃС‚РѕР№С‡РёРІРѕСЃС‚Рё Р»СѓС‡С€Рµ РІСЃРµРіРѕ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ horizontalautoscaler
