добавили стратегию обновления приложения + startupProbe

--- a/dep.yaml
+++ b/dep.yaml
@@ -13,6 +13,8 @@ spec:
     matchLabels:
       app: store
   replicas: 3
+  strategy:
+  type: RollingUpdate
   template:
     metadata:
       labels:
