--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,56 @@
-name: kubeconform
-on: [push, pull_request]
+name: Lint and Test Charts
+
+on: pull_request
+
 jobs:
-  kubeconform:
+  lint-test:
     runs-on: ubuntu-latest
     steps:
-      - name: login to Github Packages
-        run: echo "${{ github.token }}" | docker login https://ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-      - uses: actions/checkout@v2
-      - uses: docker://ghcr.io/yannh/kubeconform:master
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
-          entrypoint: '/kubeconform'
-          args: "-summary -output json kubeconfigs/"
+          fetch-depth: 0
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: v3.10.0
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+          check-latest: true
+
+      - name: Set up chart-testing
+        uses: helm/chart-testing-action@v2.3.1
+        with:
+          version: v3.4.0
+
+      - name: Run chart-testing (list-changed)
+        id: list-changed
+        run: |
+          changed=$(ct list-changed)
+          if [[ -n "$changed" ]]; then
+            echo "::set-output name=changed::true"
+            changed="${changed//$'\n'/' '}"
+            echo "::set-output name=changed_charts::$changed"
+          fi
+      - name: Run chart-testing (lint)
+        run: ct lint --all
+
+      - name: Create kind cluster
+        uses: helm/kind-action@v1.4.0
+        if: steps.list-changed.outputs.changed == 'true'
+
+      - name: Test charts validate
+        run: |
+          helm repo add grafana https://grafana.github.io/helm-charts
+          helm repo add traefik https://traefik.github.io/charts
+          helm repo update
+          helm install grafana-mimir grafana/mimir-distributed --version 4.0.0
+          helm install traefik traefik/traefik --version 10.13.0
+          for i in ${{ steps.list-changed.outputs.changed_charts }}; do
+            release="${i#'charts/'}"
+            helm install $release-test $i -f $i/values.yaml -f $i/ci/test-values.yaml --debug
+          done;
+        if: steps.list-changed.outputs.changed == 'true'
